--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,3 +29,11 @@ jobs:
 
       - name: Build project
         run: make build
+
+      - name: Setup AAT
+        run: |
+          git clone https://github.com/xconnio/xconn-aat-setup.git
+          cd xconn-aat-setup
+          make build-docker-xconn
+          docker compose up -d
+          timeout 30 bash -c 'until nc -z localhost 8080 && nc -z localhost 8081; do sleep 1; done'
