--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,3 +37,6 @@ jobs:
           make build-docker-xconn
           docker compose up -d
           timeout 30 bash -c 'until nc -z localhost 8080 && nc -z localhost 8081; do sleep 1; done'
+
+      - name: Run tests
+        run: make test
