--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,8 +35,10 @@ jobs:
           git clone https://github.com/xconnio/xconn-aat-setup.git
           cd xconn-aat-setup
           make build-docker-xconn
+          make build-docker-crossbar
           docker compose up -d
-          timeout 30 bash -c 'until nc -z localhost 8080 && nc -z localhost 8081; do sleep 1; done'
+          sudo snap install wick --classic
+          timeout 30 bash -c 'until wick --url ws://localhost:8081/ws publish test; do sleep 1; done'
 
       - name: Run tests
         run: make test
