--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "xconn",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "XConn",
   "main": "ts-built/index.js",
   "exports": {
@@ -10,6 +10,9 @@
     "types": "./ts-built/index.d.ts"
   },
   "types": "ts-built/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "prepare": "npm run build",
     "postinstall": "npm run postinstall:build",
@@ -22,17 +25,17 @@
   "author": "Mahad Munir <mahad@xconn.io>",
   "license": "MIT",
   "dependencies": {
-    "@rollup/plugin-typescript": "^12.1.4",
-    "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-replace": "^6.0.2",
+    "@rollup/plugin-typescript": "^12.1.4",
     "rollup": "^4.52.4",
     "rollup-plugin-dts": "^6.2.3",
     "tsdown": "^0.15.6",
     "tslib": "^2.8.1",
     "typescript": "^5.5.3",
-    "wampproto": "github:xconnio/wampproto-js#4150aa491591dd10c6857afef7e6c48ea595bdf7",
+    "wampproto": "^0.1.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
